# tulpje

./: .env.example  .envrc  .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Justfile  README.md  USER_GUIDE.md  cliff.toml  compose.override.example.yml  compose.swarm.yml  compose.yml  crate-hashes.json  flake.nix  rust-toolchain.toml
cache/: CHANGELOG.md  Cargo.toml  README.md
cache/src/: config.rs  event.rs  lib.rs  repository.rs
cache/src/event/: channel.rs  guild.rs  integration.rs  interaction.rs  member.rs  message.rs  presence.rs  reaction.rs  role.rs  stage_instance.rs
cache/src/models/: channel.rs  emoji.rs  guild.rs  guild_scheduled_event.rs  integration.rs  member.rs  message.rs  mod.rs  presence.rs  role.rs  stage_instance.rs  sticker.rs  user.rs  voice_state.rs
crates/tulpje-common/: Cargo.toml
crates/tulpje-common/src/: lib.rs
crates/tulpje-framework/: CHANGELOG.md  Cargo.toml
crates/tulpje-framework/src/: framework.rs  interaction.rs  metadata.rs
crates/tulpje-framework/src/context/: component_interaction_context.rs  event_context.rs  mod.rs  task_context.rs
crates/tulpje-framework/src/handler/: component_interaction_handler.rs  mod.rs  task_handler.rs
crates/tulpje-framework/src/module/: builder.rs  command_builder.rs
crates/tulpje-handler/: Cargo.toml
crates/tulpje-handler/.sqlx/: query-1cd1dde8b7391f4603d74722cc0758f06c66884a2564bac9d2bf56e1a962d0c6.json  query-6dcaccfe8840f2a24fb4a768771d7e1fef2d0a77e3d8fb2dbd41f34ed17166b5.json  query-7138f589ae9a62ff28b75631c14216dd80eb09a9e6d55b428a07fabbddd2c577.json  query-8862e2c6f3059e8545defb3c4b95d53868bd0cea7390f4952274d08051ae4492.json  query-897a798cfcf1dcb68ad9deab2c8bf2b97035bfe24c1a0fa74de444bc663e5281.json  query-ab394fe4b4b2f78b9af33148b9fb86a26678f381f89a8d02ebc772d8616b3e40.json  query-c7fee32af5d79921e21fdd81a2b1ad8e5aee2e3cfeb8a2ccecc7e1b7c5232c9c.json  query-cf270c579dc15f53d21331df73821e13c0241098fb17f42ad710be4dd303abb7.json  query-dd440c8b3c5ddabc0be1fcfc275ff326bafc9a9474524df70ef82b8327c85124.json  query-f5669f377b6f072eb0b48b6a24f062a03a84dbf3fe74b5577ac040d055e8a95c.json
crates/tulpje-handler/migrations/: 20260320234450_create_pk_system_fronters.sql  20260322161905_guild_modules_delete_pk.sql
crates/tulpje-handler/src/: config.rs  db.rs  main.rs  metrics.rs  responses.rs  util.rs
crates/tulpje-handler/src/modules/: mod.rs
crates/tulpje-lib/: Cargo.toml
crates/tulpje-lib/src/: db.rs  lib.rs  responses.rs  util.rs
crates/tulpje-mod-core/: Cargo.toml
crates/tulpje-mod-core/src/: commands.rs  db.rs  event_handlers.rs  lib.rs  tasks.rs
crates/tulpje-mod-emoji/: Cargo.toml
crates/tulpje-mod-emoji/src/: clone.rs  commands.rs  db.rs  event_handlers.rs  lib.rs
crates/tulpje-mod-pluralkit/: Cargo.toml
crates/tulpje-mod-pluralkit/src/: commands.rs  db.rs  lib.rs  util.rs
crates/tulpje-mod-pluralkit/src/fronters/: db.rs  mod.rs  setup.rs  (+3 more)
crates/tulpje-mod-stats/: Cargo.toml
crates/tulpje-mod-stats/src/: commands.rs  lib.rs  redis.rs
crates/tulpje-shared/: Cargo.toml
framework/: CHANGELOG.md  Cargo.toml
framework/benches/: framework.rs
framework/src/: color.rs  context.rs  framework.rs  interaction.rs  lib.rs  module.rs  scheduler.rs
framework/src/context/: command_context.rs  component_interaction_context.rs  event_context.rs  modal_context.rs  task_context.rs
framework/src/handler/: command_handler.rs
framework/src/module/: builder.rs  command_builder.rs  registry.rs
gateway/: Cargo.toml  build.rs
gateway/src/: amqp.rs  config.rs  main.rs  metrics.rs  parsed_event.rs  shard_manager.rs  shard_reporter.rs  shard_state.rs
handler/: Cargo.toml
handler/.sqlx/: query-00683a63675a4423a762867ec79176da0386fc526bd239eea791da258e53d2c9.json  query-0ca639b0c6d47858718b836704ac71a8e34e5b4e7be5d45381d2c5b1b25d7780.json  query-1118ea568807a68c86abc6e602300eb5a181a640e8d8e94b1e2f41c3043241a9.json  query-1be6054f75d49b8bc3873bbd67ce26b59b9bccf937a58b27ed24a2bad51beccf.json  query-2396f7c01de90d5c6dfba9522a5a0b758234906a152819b57d7b558f8a8ac9a2.json  query-2a3cb02a6fc39eafaa4a7ece5303c66e5e254580c8368f822862ca0c8f4adb78.json  query-2e2b9165fd34284c7705fe55772d3c09392550856d54efb449137b1578e4d720.json  query-3c569dd8097d9e2ff49fe2888c91f0455012ddab02b362212cba5a1003a5adf5.json  query-40ac45222e3cb7bd968a62fe8bfd7dc01be12219a0565a6a363bc51182c54522.json  query-6881af331ee97140b953ebb9f9d1ff27809ea0dadadab8bbfb0e327d689cc08d.json  query-6becbd9f7bf1a2b2ea12eddaa5ef65c1453c13a5dfa07c6881d7e56c8d38ce88.json  query-6d8d40f35f0497213f1e180a89121b8a7d3ecac2deb2d396084362190bbeb678.json  query-a51a41d05f194ba4995e106bbb36cec76e41a5eede6dc26b854dfdacc78c0d7c.json  query-c6293ffc7d9691583140ed7bd8863ab8306d6efe0fded253e214b5e3d9556d23.json  query-da9f9486ac112322e795a95bd2e656bd1db9cc60bb38e4421aab35a69cf2a7b9.json  query-dde764ddce85583b72bb94bb614497f9a3c0640245ca5037524dc07e5b3969ad.json  query-e13a3dd787da668e8f8ffb0c57377cd0a8a2f4492a801c02ff3c7c53e79f7c07.json  query-ed2a6283d56ca4a03ebb3acc218ddfca5a1986a6cbb3a9c084f5f2c2355e97d2.json  query-f0d084d4ec11c60b2708d30a3b1d9d83d92a2036b66c003de56c7b7fdc847229.json  query-f822be4d02fe0fa64feec3730b5fdacd4bea8290af473c5d8cd03c8d44b6dbd5.json
handler/migrations/: 20260320171135_create_pk_notify_channels.sql  20260320171140_create_pk_systems.sql  20260320181137_create_pk_notify_systems.sql  20260321132921_pk_guilds_drop_token.sql
handler/src/: amqp.rs  config.rs  context.rs  db.rs  main.rs  metrics.rs  modules.rs  responses.rs  util.rs
handler/src/modules/: core.rs  emoji.rs  pk.rs  stats.rs  test.rs
manager/: Cargo.toml
manager/src/: main.rs
reconnecting-amqp/: CHANGELOG.md  Cargo.toml
reconnecting-amqp/src/: channel_callback.rs  connection.rs  connection_callback.rs  consumer.rs  event.rs
shared/: Cargo.toml
shared/src/: amqp.rs  lib.rs  logging.rs  metrics.rs  shard_state.rs
shared/src/amqp/: channel_callback.rs  close_reason.rs  connection.rs  connection_callback.rs  consumer.rs  event.rs  state_machine.rs
tools/release-tulpje/: pyproject.toml
utils/: Cargo.toml
utils/src/: secret_loader.rs
(+145 files in other folders)
