[workspace]
members = [
	"gateway", "handler", "manager", "utils", "shared", "framework", "cache", "reconnecting-amqp",
]

resolver = "3"

[workspace.package]
version = "0.19.0"
description = "Multi-purpose discord bot & framework"
homepage = "https://github.com/z0w13/tulpje"
repository = "https://github.com/z0w13/tulpje"
license = "CC-BY-NC-SA-4.0"
# See also `rust-toolchain.toml`
rust-version = "1.91.0"
edition = "2024"

[workspace.metadata]
crane.name = "tulpje"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["alloc", "clock", "std"], default-features = false }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
redis = { version = "1.0.1", default-features = false, features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.1", default-features = false }
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.48.0" }
tokio-util = { version = "0.7.17" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
twilight-cache-inmemory = { version = "0.17.0" }
twilight-gateway = { version = "0.17.0", default-features = false }
twilight-http = { version = "0.17.0", default-features = false }
twilight-model = { version = "0.17.0" }
twilight-util = { version = "0.17.0" }

[workspace.lints.clippy]
# give a reason why it's allowed, thanks
allow_attributes = "deny"
# it's recommended to no longer use mod.rs files
mod_module_files = "deny"
# we like consistency :)
renamed_function_params = "warn"
# rust can't always optimise them out so remove them
redundant_clone = "warn"
# for loops are clearer if we can use them
needless_for_each = "warn"
# clearer we're doing a "cheap" clone this way
clone_on_ref_ptr = "warn"
# it's probably mistake unless explicitly allowed
integer_division = "warn"
# we should explicitly ok data loss when converting types
cast_lossless = "warn"
cast_precision_loss = "warn"
# I do like this syntax, but it might be less clear
if_then_some_else_none = "warn"
# the suggestions are usually not great, but this does usually indicate we can
# refactor the code to
option_if_let_else = "warn"
# don't wanna evaluate things unnecessarily
or_fun_call = "warn"
# .iter() / .into_iter() are not needed when using for loops
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"

indexing_slicing = "warn"
manual_assert = "warn"
redundant_else = "warn"
unwrap_in_result = "warn"
unneeded_field_pattern = "warn"
ignored_unit_patterns = "warn"
semicolon_if_nothing_returned = "warn"
unused_trait_names = "warn"
implicit_clone = "warn"
manual_string_new = "warn"
from_iter_instead_of_collect = "warn"
needless_pass_by_value = "warn"
use_self = "warn"
get_unwrap = "warn"
partial_pub_fields = "warn"
missing_assert_message = "warn"
match_bool = "deny"
redundant_closure = "warn"
