[package]
name = "tulpje-cache"
version = "0.4.0-rc.1"
description = "A redis cache for twilight"
# tulpje-cache is heavily based on twilight-cache-inmemory
# I don't know how the licensing would work here so ISC it is
license = "ISC"

edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
redis = { workspace = true }
twilight-model = { workspace = true }
twilight-cache-inmemory = { workspace = true }

[lints]
workspace = true
