[package]
name = "tulpje-cache"
version = "0.4.0"
description = "A redis cache for twilight"
# tulpje-cache is heavily based on twilight-cache-inmemory
# I don't know how the licensing would work here so ISC it is
license = "ISC"

edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
twilight-model = { workspace = true }
twilight-cache-inmemory = { workspace = true }

[lints]
workspace = true
