[package]
name = "tulpje-framework"
edition = "2021"
version = "0.14.2"

description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# TODO: Add support for picking TLS implementation and PKI source
#       is that even needed here if we pass the http client in from other crates?
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9", version = "0.16.0", features = ["decompression", "rustls-ring", "rustls-webpki-roots"], default-features = false }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9", version = "0.16.0" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9", version = "0.16.0", default-features = false }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9", version = "0.16.0", features = ["builder"] }
tracing = "0.1.41"
async-cron-scheduler = { version = "2.0.1", features = ["logging"] }
chrono = { version = "0.4.40", features = ["alloc", "clock", "std"], default-features = false }
tokio = "1.43.0"
uuid = { version = "1.16.0", features = ["v7", "serde"] }
tokio-util = { version = "0.7.14", features = ["rt"] }
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true
