[package]
name = "tulpje-framework"
version = "0.14.2"

edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# TODO: Add support for picking TLS implementation and PKI source
#       is that even needed here if we pass the http client in from other crates?
twilight-http = { workspace = true, features = ["decompression", "rustls-ring", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-gateway = { workspace = true }
twilight-util = { workspace = true, features = ["builder"] }
tracing = "0.1.41"
async-cron-scheduler = { version = "2.0.1", features = ["logging"] }
chrono = { version = "0.4.42", features = ["alloc", "clock", "std"], default-features = false }
tokio = "1.47.1"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true
