[package]
name = "tulpje-gateway"
build = "../contrib/build.rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tulpje-shared = { version = "0.18.0-beta.3", path = "../shared" }
reconnecting-amqp = { version = "0.1.0", path = "../reconnecting-amqp" }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
twilight-gateway = { workspace = true, features = ["rustls-ring", "rustls-webpki-roots" ] }
twilight-model = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "charset", "http2"] }
redis = { workspace = true }
futures-util = "0.3.31"
metrics = "0.24.2"
metrics-exporter-prometheus = { workspace = true }
figment = { version = "0.10.19", features = ["env"] }
figment_file_provider_adapter = "0.1.1"
