[package]
name = "tulpje-gateway"
build = "../contrib/build.rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tulpje-shared = { version = "0.19.0", path = "../shared" }
reconnecting-amqp = { version = "0.2.0", path = "../reconnecting-amqp" }
rustls = { workspace = true }
serde_json = "1.0.145"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
twilight-gateway = { workspace = true, features = ["rustls-webpki-roots"] }
twilight-model = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "charset", "http2"] }
redis = { workspace = true }
futures-util = "0.3.31"
metrics = "0.24.3"
metrics-exporter-prometheus = { workspace = true }
figment = { version = "0.10.19", features = ["env"] }
figment_file_provider_adapter = "0.1.1"
