[package]
name = "tulpje-handler"
build = "../contrib/build.rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tulpje-shared = { version = "0.18.0-beta.3", path = "../shared" }
tulpje-framework = { version = "0.14.2", path = "../framework" }
reconnecting-amqp = { version = "0.1.0", path = "../reconnecting-amqp" }
futures-util = "0.3.31"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true, features = ["decompression", "rustls-ring", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["alloc", "clock", "std"], default-features = false }
num-format = "0.4.4"
regex = "1.12.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json", "macros", "migrate"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "charset", "http2"] }
base64 = "0.22.1"
pkrs-fork = { version = "0.4.0", default-features = false, features = ["reqwest-client", "rustls-tls"] }
serde_either = "0.2.1"
metrics = "0.24.2"
metrics-exporter-prometheus = { workspace = true }
tulpje-cache = { version = "0.3.0", path = "../cache" }
redis = { workspace = true }
figment = { version = "0.10.19", features = ["env"] }
figment_file_provider_adapter = "0.1.1"

[lints]
workspace = true
