[package]
name = "tulpje-handler"
build = "../contrib/build.rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tulpje-shared = { version = "0.21.1-rc.1", path = "../shared" }
tulpje-framework = { version = "0.16.0", path = "../framework" }
tulpje-cache = { version = "0.5.0", path = "../cache" }
reconnecting-amqp = { version = "0.2.1", path = "../reconnecting-amqp" }
rustls = { workspace = true }
futures-util = "0.3.31"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = { workspace = true }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder", "permission-calculator"] }
serde = { workspace = true }
chrono = { workspace = true }
num-format = "0.4.4"
regex = "1.12.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json", "macros", "migrate", "uuid"] }
reqwest = { workspace = true, features = ["rustls", "charset", "http2"] }
base64 = "0.22.1"
pkrs-fork = { version = "0.6.1", default-features = false, features = ["reqwest-client", "rustls-tls"] }
serde_either = "0.2.1"
metrics = "0.24.3"
metrics-exporter-prometheus = { workspace = true }
redis = { workspace = true }
figment = { version = "0.10.19", features = ["env"] }
figment_file_provider_adapter = "0.1.1"
uuid = { version = "1.19.0", features = ["v7", "serde"] }

[lints]
workspace = true
