[package]
name = "tulpje-manager"
edition = "2021"

version.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", rev = "7f08d954c7b4f4245047f34de5116abdb53f24d9", version = "0.16.0", features = ["decompression", "rustls-ring", "rustls-webpki-roots"], default-features = false }

[lints]
workspace = true
