[package]
name = "tulpje-manager"
edition = "2021"

version.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
twilight-http = { workspace = true, features = ["decompression", "rustls-ring", "rustls-webpki-roots"] }

[lints]
workspace = true
