[package]
name = "tulpje-manager"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
rustls = { workspace = true }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }

[lints]
workspace = true
