[package]
name = "reconnecting-amqp"
version = "0.1.0"

edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
amqprs = { version = "2.1.2", features = ["compliance_assert", "traces", "urispec"] }
async-trait = "0.1.89"
tokio = "1.48.0"
tokio-util = { version = "0.7.16" }
tracing = "0.1.41"

[lints]
workspace = true
