[package]
name = "reconnecting-amqp"
version = "0.2.0"
description = "Auto-reconnecting amqprs wrapper"

edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
amqprs = { version = "2.1.3", features = ["compliance_assert", "traces", "urispec"] }
async-trait = "0.1.89"
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = "0.1.41"

[lints]
workspace = true
