[package]
name = "tulpje-shared"

version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.16.2", features = ["http-listener"], default-features = false }
metrics-process = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.43.0"
twilight-model = { workspace = true }
tracing = "0.1.41"
tulpje-framework = { version = "0.14.2", path = "../framework" }
redis = { version = "0.29.1", default-features = false, features = ["tokio-comp", "connection-manager"] }

[lints]
workspace = true
