[package]
name = "tulpje-shared"

version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
metrics = "0.24.2"
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
metrics-process = "2.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { workspace = true }
twilight-model = { workspace = true }
tracing = "0.1.41"
tulpje-framework = { version = "0.14.2", path = "../framework" }
redis = { workspace = true }

[lints]
workspace = true
