[package]
name = "tulpje-shared"

version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
metrics = "0.24.3"
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
metrics-process = "2.4.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
twilight-model = { workspace = true }
tracing = { workspace = true }
tulpje-framework = { version = "0.15.0", path = "../framework" }
redis = { workspace = true }

[lints]
workspace = true
