[package]
name = "tulpje-utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "secret-loader"
path = "src/secret_loader.rs"

[[bin]]
name = "check-http"
path = "src/check_http.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "charset", "h2", "http2", "rustls-tls"], default-features = false }
