[package]
name = "tulpje-utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "secret-loader"
path = "src/secret_loader.rs"

[[bin]]
name = "check-http"
path = "src/check_http.rs"

[dependencies]
reqwest = { workspace = true, features = ["blocking", "charset", "http2", "rustls"] }
