[package]
name = "tulpje-common"
description = "Common code shared between Tulpje processes"
publish = false

version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
metrics = "0.24.3"
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
metrics-process = "2.4.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "json" ] }
tulpje-framework = { version = "0.16.1", path = "../tulpje-framework" }
redis = { workspace = true }

[lints]
workspace = true
