[package]
name = "tulpje-framework"
version = "0.16.0"
publish = true

edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# TODO: Add support for picking TLS implementation and PKI source
#       is that even needed here if we pass the http client in from other crates?
rustls = { workspace = true }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-gateway = { workspace = true }
twilight-util = { workspace = true, features = ["builder"] }
tracing = { workspace = true }
async-cron-scheduler = { version = "2.0.1", features = ["logging"] }
chrono = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
serde = { workspace = true }

[lints]
workspace = true
