[package]
name = "tulpje-handler"
build = "../../contrib/build.rs"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tulpje-common = { version = "0.21.5", path = "../tulpje-common" }
tulpje-lib = { version = "0.21.5", path = "../tulpje-lib" }
tulpje-framework = { version = "0.16.0", path = "../tulpje-framework" }
tulpje-cache = { version = "0.5.0", path = "../tulpje-cache" }
tulpje-mod-pluralkit = { version = "0.21.5", path = "../tulpje-mod-pluralkit" }
tulpje-mod-emoji = { version = "0.21.5", path = "../tulpje-mod-emoji" }
reconnecting-amqp = { version = "0.2.1", path = "../reconnecting-amqp" }
rustls = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = { workspace = true }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder", "permission-calculator"] }
serde = { workspace = true }
chrono = { workspace = true }
num-format = "0.4.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json", "macros", "migrate", "uuid"] }
pkrs-fork = { version = "0.6.1", default-features = false, features = ["reqwest-client", "rustls-tls"] }
metrics = "0.24.3"
metrics-exporter-prometheus = { workspace = true }
redis = { workspace = true }
figment = { version = "0.10.19", features = ["env"] }
figment_file_provider_adapter = "0.1.1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
