[package]
name = "tulpje-lib"
description = "Functionality shared between Tulpje modules"
publish = false

version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
pkrs-fork = { version = "0.6.1", default-features = false, features = ["reqwest-client", "rustls-tls"] }
redis = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json", "macros", "uuid"] }
tulpje-cache = { version = "0.5.1", path = "../tulpje-cache" }
tulpje-framework = { version = "0.16.1", path = "../tulpje-framework" }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder", "permission-calculator"] }

[lints]
workspace = true
