[package]
name = "tulpje-mod-core"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json", "macros", "migrate", "uuid"] }
tracing = { workspace = true }
tulpje-framework = { version = "0.16.0", path = "../tulpje-framework" }
tulpje-lib = { version = "0.21.5", path = "../tulpje-lib" }
twilight-gateway = { workspace = true }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder"] }

[lints]
workspace = true
