[package]
name = "tulpje-mod-pluralkit"
publish = false
build = "../../contrib/build.rs"

version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
metrics = "0.24.3"
pkrs-fork = { version = "0.6.1", default-features = false, features = ["reqwest-client", "rustls-tls"] }
reqwest = { workspace = true, features = ["rustls", "charset", "http2"] }
serde_either = "0.2.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json", "macros", "uuid"] }
tracing = { workspace = true }
tulpje-cache = { version = "0.5.1", path = "../tulpje-cache" }
tulpje-framework = { version = "0.16.1", path = "../tulpje-framework" }
tulpje-lib = { version = "0.22.0", path = "../tulpje-lib" }
twilight-http = { workspace = true, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }

[lints]
workspace = true
