[package]
name = "tulpje-mod-stats"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
num-format = "0.4.4"
redis = { workspace = true }
tracing = { workspace = true }
tulpje-common = { version = "0.21.5", path = "../tulpje-common" }
tulpje-framework = { version = "0.16.0", path = "../tulpje-framework" }
tulpje-lib = { version = "0.21.5", path = "../tulpje-lib" }
twilight-model = { workspace = true }
twilight-util = { workspace = true, features = ["builder"] }

[lints]
workspace = true
