[project]
name = "release-tulpje"
version = "0.1.0"
description = "Tool to aid in releasing new versions of Tulpje"
authors = [
    { name = "Zowie", email = "git@zowie.cx" }
]
requires-python = ">=3.14"
dependencies = [
    "semver>=3.0.4",
    "tomlkit>=0.14.0",
]

[project.scripts]
release-tulpje = "release_tulpje:entrypoint"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"
